--- a/src/components/notification/components/NotificationCard.tsx/NotificationCard.scss
+++ b/src/components/notification/components/NotificationCard.tsx/NotificationCard.scss
@@ -1,6 +1,6 @@
 .notificationCard {
   position: relative;
-  min-height: 10.6rem;
+  min-height: 100%;
   padding: 14px;
   width: 11.75rem;
   height: fit-content;
